fix: fixes a z-index issue with the angles display

--- a/wp-content/themes/wingman/src/sass/components/_basic.scss
+++ b/wp-content/themes/wingman/src/sass/components/_basic.scss
@@ -49,6 +49,7 @@
                 position: absolute;
                 top: -100px;
                 width: 100%;
+                z-index: 5;
             }
 
             &::after {
@@ -62,6 +63,7 @@
                 position: absolute;
                 bottom: -100px;
                 width: 100%;
+                z-index: 5;
             }
         }
     }
