--- a/wp-content/themes/wingman/src/sass/contexts/_navigation.scss
+++ b/wp-content/themes/wingman/src/sass/contexts/_navigation.scss
@@ -3,7 +3,7 @@
         background: rgba($black, 0.9);
         position: fixed;
         width: 100%;
-        z-index: 4;
+        z-index: 20;
 
         &-inner {
             display: flex;
